Possible components for these packages

--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
  - These packages will be moved from system.base:
-   - coolplug
-   - jpeg
-   - lcms
-   - libmng
-   - libpng
-   - memtest86
-   - tiff
+   - coolplug   (hardware.misc)
+   - jpeg       (multimedia.graphics)
+   - lcms       (multimedia.graphics)
+   - libmng     (multimedia.graphics)
+   - libpng     (multimedia.graphics)
+   - memtest86  (system.boot)
+   - tiff       (multimedia.graphics)
 
  - Move xz and python-pyliblzma into system.base & drop lzma
