--- a/programming/language/python/python-cairo/pspec.xml
+++ b/programming/language/python/python-cairo/pspec.xml
@@ -27,6 +27,9 @@
         <RuntimeDependencies>
             <Dependency versionFrom="1.8.10">cairo</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pycairo</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
         </Files>
@@ -45,6 +48,13 @@
     </Package>
 
     <History>
+        <Update release="10">
+            <Date>2010-08-17</Date>
+            <Version>1.8.10</Version>
+            <Comment>Add replaces for pycairo</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="9">
             <Date>2010-08-17</Date>
             <Version>1.8.10</Version>
