Split develepment files

--- a/programming/language/tcl/tcl/pspec.xml
+++ b/programming/language/tcl/tcl/pspec.xml
@@ -23,15 +23,35 @@
         <Name>tcl</Name>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
-            <Path fileType="header">/usr/include</Path>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="data">/usr/lib/tcl8.5</Path>
-            <Path fileType="man">/usr/share/doc</Path>
+            <Path fileType="doc">/usr/share/doc</Path>
             <Path fileType="man">/usr/share/man</Path>
         </Files>
     </Package>
 
+    <Package>
+        <Name>tcl-devel</Name>
+        <Summary>Development files for tcl</Summary>
+        <RuntimeDependencies>
+            <Dependency release="14">tcl</Dependency>
+        </RuntimeDependencies>
+        <Files>
+            <Path fileType="header">/usr/include</Path>
+            <Path fileType="library">/usr/lib/*.a</Path>
+            <Path fileType="data">/usr/lib/tclConfig.sh</Path>
+            <Path fileType="man">/usr/share/man/man3</Path>
+        </Files>
+    </Package>
+
     <History>
+        <Update release="14">
+            <Date>2010-08-18</Date>
+            <Version>8.5.8</Version>
+            <Comment>Split devel package.</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="13">
             <Date>2009-12-16</Date>
             <Version>8.5.8</Version>
