--- a/programming/language/lisp/guile/pspec.xml
+++ b/programming/language/lisp/guile/pspec.xml
@@ -44,16 +44,28 @@
         <Name>guile-devel</Name>
         <Summary>Development files for guile</Summary>
         <RuntimeDependencies>
-            <Dependency release="8">guile</Dependency>
+            <Dependency release="9">guile</Dependency>
         </RuntimeDependencies>
+        <Conflicts>
+            <Package releaseTo="8">guile</Package>
+        </Conflicts>
         <Files>
             <Path fileType="executable">/usr/bin/guile-config</Path>
+            <Path fileType="executable">/usr/bin/guile-snarf</Path>
             <Path fileType="header">/usr/include</Path>
             <Path fileType="data">/usr/lib/pkgconfig</Path>
+            <Path fileType="data">/usr/share/aclocal</Path>
         </Files>
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-08-20</Date>
+            <Version>1.8.7</Version>
+            <Comment>Move guile-snarf and aclocal file to devel package.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-08-19</Date>
             <Version>1.8.7</Version>
