--- a/programming/language/perl/perl-Font-TTF/pspec.xml
+++ b/programming/language/perl/perl-Font-TTF/pspec.xml
@@ -14,14 +14,14 @@
         <Description>perl-Font-TTF is a Perl module that allows you to do almost anything to a TrueType/OpenType Font including modifying and inspecting nearly all tables.</Description>
         <Archive sha1sum="846047f80b96b00dcfd284900916deba2baf4b26" type="targz">http://search.cpan.org/CPAN/authors/id/M/MH/MHOSKEN/Font-TTF-0.45.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Font-TTF</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
