Massively update perl packages for strict 5.12.1 dependency ;)

--- a/programming/language/perl/perl-Devel-Symdump/pspec.xml
+++ b/programming/language/perl/perl-Devel-Symdump/pspec.xml
@@ -15,13 +15,13 @@
         <Description>perl-Devel-Symdump is a Perl module that dumps symbol names or the symbol table.</Description>
         <Archive sha1sum="0530224fd3d082a4a6b4f5b6dea333423a29c66d" type="targz">mirrors://cpan/authors/id/A/AN/ANDK/Devel-Symdump-2.08.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Devel-Symdump</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>2.08</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-18</Date>
             <Version>2.08</Version>
