--- a/programming/language/perl/perl-IO-String/pspec.xml
+++ b/programming/language/perl/perl-IO-String/pspec.xml
@@ -15,13 +15,13 @@
         <Description>perl-IO-String is an IO::File interface for in-core strings in Perl.</Description>
         <Archive sha1sum="1a8cea5b19b6abb7f3731d6804073c0dd911d944" type="targz">mirrors://cpan/authors/id/G/GA/GAAS/IO-String-1.08.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-IO-String</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>1.08</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-21</Date>
             <Version>1.08</Version>
