--- a/programming/language/perl/perl-Math-Base85/pspec.xml
+++ b/programming/language/perl/perl-Math-Base85/pspec.xml
@@ -15,14 +15,14 @@
         <Description>perl-Math-Base85 is a Perl extension for base 85 numbers, as referenced by RFC 1924.</Description>
         <Archive sha1sum="eae5fd953dc2b6b0e15ab9d6aeee705156cc943b" type="targz">http://search.cpan.org/CPAN/authors/id/T/TM/TMONROE/Math-Base85-0.2.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Math-Base85</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.2</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-06</Date>
             <Version>0.2</Version>
