--- a/programming/language/perl/perl-Number-Compare/pspec.xml
+++ b/programming/language/perl/perl-Number-Compare/pspec.xml
@@ -14,14 +14,14 @@
         <Description>Number::Compare compiles a simple comparison to an anonymous subroutine, which you can call with a value to be tested again.</Description>
         <Archive sha1sum="d768ceab714b50fe1fa8e7d9133de736f58fb7b7" type="targz">mirrors://cpan/authors/id/R/RC/RCLAMP/Number-Compare-0.01.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Number-Compare</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-08-21</Date>
+            <Version>0.01</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2009-12-04</Date>
             <Version>0.01</Version>
