--- a/programming/language/perl/perl-String-Format/pspec.xml
+++ b/programming/language/perl/perl-String-Format/pspec.xml
@@ -14,13 +14,13 @@
         <Description>perl-String-Format is a Perl module that allows for sprintf-style formatting capabilities with arbitrary format definitions.</Description>
         <Archive sha1sum="7919d902c3bd69323fd4a6b2a459b7431d18510e" type="targz">mirrors://cpan/authors/id/D/DA/DARREN/String-Format-1.16.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-String-Format</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -29,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>1.16</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-21</Date>
             <Version>1.16</Version>
