--- a/programming/language/perl/perl-Tidy/pspec.xml
+++ b/programming/language/perl/perl-Tidy/pspec.xml
@@ -16,13 +16,13 @@
         <Description>perl-Tidy a Perl module that parses and beautifies perl source.</Description>
         <Archive sha1sum="e14d4ec61e546a3208f3e790edacc500431c6253" type="targz">mirrors://cpan/authors/id/S/SH/SHANCOCK/Perl-Tidy-20090616.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Tidy</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>20090616</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-21</Date>
             <Version>20090616</Version>
