--- a/programming/language/perl/perl-File-Find-Rule/pspec.xml
+++ b/programming/language/perl/perl-File-Find-Rule/pspec.xml
@@ -16,7 +16,7 @@
          <BuildDependencies>
             <Dependency>perl-Text-Glob</Dependency>
             <Dependency>perl-Number-Compare</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -25,7 +25,7 @@
         <RuntimeDependencies>
             <Dependency>perl-Text-Glob</Dependency>
             <Dependency>perl-Number-Compare</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-08-21</Date>
+            <Version>0.32</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2009-12-11</Date>
             <Version>0.32</Version>
