--- a/programming/language/perl/perl-Hook-LexWrap/pspec.xml
+++ b/programming/language/perl/perl-Hook-LexWrap/pspec.xml
@@ -15,13 +15,13 @@
         <Description>perl-Hook-LexWrap is a Perl module that allows you to install a pre- or post-wrapper (or both) around an existing subroutine.</Description>
         <Archive sha1sum="aba74c1d5d15ae0043148318c49222ee62de8ce8" type="targz">mirrors://cpan/authors/id/C/CH/CHORNY/Hook-LexWrap-0.23.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Hook-LexWrap</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-08-21</Date>
+            <Version>0.23</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-07-27</Date>
             <Version>0.23</Version>
