--- a/programming/language/perl/perl-Net-IPv4Addr/pspec.xml
+++ b/programming/language/perl/perl-Net-IPv4Addr/pspec.xml
@@ -16,14 +16,14 @@
         <Description>perl-Net-IPv4Addr calculates IPv4 elements from an address.</Description>
         <Archive sha1sum="da26fed2a1ea13c34ebef86606899c5fb294af98" type="targz">http://search.cpan.org/CPAN/authors/id/F/FR/FRAJULAC/Net-IPv4Addr-0.10.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Net-IPv4Addr</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -33,6 +33,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.10</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-06</Date>
             <Version>0.10</Version>
