--- a/programming/language/perl/perl-Net-IPv6Addr/pspec.xml
+++ b/programming/language/perl/perl-Net-IPv6Addr/pspec.xml
@@ -15,9 +15,8 @@
         <Description>perl-Net-IPv6Addr checks strings for valid IPv6 addresses, as specified in RFC1884.</Description>
         <Archive sha1sum="44607f36dcac8857d9f645ec208f82b5ea5b9c80" type="targz">http://search.cpan.org/CPAN/authors/id/T/TM/TMONROE/Net-IPv6Addr-0.2.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
             <Dependency>perl-Math-Base85</Dependency>
-            <Dependency>perl-Math-BigInt</Dependency>
             <Dependency>perl-Net-IPv4Addr</Dependency>
         </BuildDependencies>
     </Source>
@@ -25,9 +24,8 @@
     <Package>
         <Name>perl-Net-IPv6Addr</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
             <Dependency>perl-Math-Base85</Dependency>
-            <Dependency>perl-Math-BigInt</Dependency>
             <Dependency>perl-Net-IPv4Addr</Dependency>
         </RuntimeDependencies>
         <Files>
@@ -37,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.2</Version>
+            <Comment>Strictly depend on perl 5.12.1 and remove perl CORE perl-Math-BigInt dependency.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-07</Date>
             <Version>0.2</Version>
