--- a/programming/language/perl/perl-Probe-Perl/pspec.xml
+++ b/programming/language/perl/perl-Probe-Perl/pspec.xml
@@ -15,13 +15,13 @@
         <Description>perl-Probe-Perl is a Perl module for getting information about the currently running perl.</Description>
         <Archive sha1sum="36a9dde1953c0ab0bcd3998fca876b8f20f245cd" type="targz">mirrors://cpan/authors/id/K/KW/KWILLIAMS/Probe-Perl-0.01.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Probe-Perl</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.01</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-22</Date>
             <Version>0.01</Version>
