--- a/programming/language/perl/perl-Readonly/pspec.xml
+++ b/programming/language/perl/perl-Readonly/pspec.xml
@@ -15,14 +15,14 @@
         <Description>perl-Readonly is a facility for creating read-only scalars, arrays, hashes.</Description>
         <Archive sha1sum="31220d04adc3b407cfe2d5bcb04d7ff07e923ab8" type="targz">mirrors://cpan/authors/id/R/RO/ROODE/Readonly-1.03.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Readonly</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>1.03</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-08</Date>
             <Version>1.03</Version>
