--- a/programming/language/perl/perl-Regexp-IPv6/pspec.xml
+++ b/programming/language/perl/perl-Regexp-IPv6/pspec.xml
@@ -15,14 +15,14 @@
         <Description>perl-Regexp-IPv6 is a Perl module exports the $IPv6_re regular expression that matches any valid IPv6 address as described in "RFC 2373 - 2.2 Text Representation of Addresses" but ::. Any string not compliant with such RFC will be rejected.</Description>
         <Archive sha1sum="0926165c486339f5377a396927691848d382dc61" type="targz">http://search.cpan.org/CPAN/authors/id/S/SA/SALVA/Regexp-IPv6-0.03.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Regexp-IPv6</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.03</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-05</Date>
             <Version>0.03</Version>
