--- a/programming/language/perl/perl-SVN-Simple/pspec.xml
+++ b/programming/language/perl/perl-SVN-Simple/pspec.xml
@@ -14,14 +14,14 @@
         <Archive sha1sum="3a47dbe7fb95f19eefe24ad29f7d67bc074708fc" type="targz">mirrors://cpan/authors/id/C/CL/CLKAO/SVN-Simple-0.28.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>subversion</Dependency>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-SVN-Simple</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Replaces>
             <Package>SVN-Simple</Package>
@@ -36,6 +36,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-08-21</Date>
+            <Version>0.28</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="5">
             <Date>2010-08-18</Date>
             <Version>0.28</Version>
