--- a/programming/language/perl/perl-Test-Tester/pspec.xml
+++ b/programming/language/perl/perl-Test-Tester/pspec.xml
@@ -15,13 +15,13 @@
         <Description>perl-Test-Tester eases testing test modules built with Test::Builder.</Description>
         <Archive sha1sum="1cc2695d0b3dbbd39d63ed86ba6340079815f368" type="targz">mirrors://cpan/authors/id/F/FD/FDALY/Test-Tester-0.107.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Test-Tester</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>0.107</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-22</Date>
             <Version>0.107</Version>
