--- a/programming/language/perl/perl-Text-Glob/pspec.xml
+++ b/programming/language/perl/perl-Text-Glob/pspec.xml
@@ -14,14 +14,14 @@
         <Description>Text::Glob implements glob(3) style matching that can be used to match against text, rather than fetching names from a filesystem.</Description>
         <Archive sha1sum="86b6a5e4cff2589d733975277b6f101b949ee975" type="targz">mirrors://cpan/authors/id/R/RC/RCLAMP/Text-Glob-0.08.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
         <Name>perl-Text-Glob</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-08-21</Date>
+            <Version>0.08</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="3">
             <Date>2009-12-04</Date>
             <Version>0.08</Version>
