--- a/programming/language/perl/perl-Text-Template/pspec.xml
+++ b/programming/language/perl/perl-Text-Template/pspec.xml
@@ -14,13 +14,13 @@
         <Description>perl-Text-Template expands template text with embedded Perl.</Description>
         <Archive sha1sum="d737a71344267d1585f881f5256113363b641e7c" type="targz">mirrors://cpan/authors/id/M/MJ/MJD/Text-Template-1.45.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
     </Source>
     <Package>
         <Name>perl-Text-Template</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="5.10.1">perl</Dependency>
+            <Dependency version="5.12.1">perl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -29,6 +29,13 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-08-21</Date>
+            <Version>1.45</Version>
+            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-05-18</Date>
             <Version>1.45</Version>
