forgot this, writing full package name in doc.

--- a/programming/language/perl/perl-HTML-Tagset/pspec.xml
+++ b/programming/language/perl/perl-HTML-Tagset/pspec.xml
@@ -26,7 +26,7 @@
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="man">/usr/share/man</Path>
-            <Path fileType="doc">/usr/share/doc</Path>
+            <Path fileType="doc">/usr/share/doc/perl-HTML-Tagset</Path>
         </Files>
     </Package>
 
