remove useless pisitools.removeDir func. in actions.py, sorry for the inconvenience..

--- a/programming/language/perl/perl-Net-IPv6Addr/pspec.xml
+++ b/programming/language/perl/perl-Net-IPv6Addr/pspec.xml
@@ -38,7 +38,7 @@
         <Update release="2">
             <Date>2010-08-21</Date>
             <Version>0.2</Version>
-            <Comment>Strictly depend on perl 5.12.1 and remove perl CORE perl-Math-BigInt dependency.</Comment>
+            <Comment>Strictly depend on perl 5.12.1, remove useless pisitools.removeDir func. in actions.py and remove perl CORE perl-Math-BigInt dependency.</Comment>
             <Name>Serdar Dalgıç</Name>
             <Email>serdar@pardus.org.tr</Email>
         </Update>
