--- a/programming/language/perl/perl-Tidy/pspec.xml
+++ b/programming/language/perl/perl-Tidy/pspec.xml
@@ -36,7 +36,7 @@
         <Update release="2">
             <Date>2010-08-21</Date>
             <Version>20090616</Version>
-            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Comment>Strictly depend on perl 5.12.1 and remove useless pisitools.removeDir func. in actions.py.</Comment>
             <Name>Serdar Dalgıç</Name>
             <Email>serdar@pardus.org.tr</Email>
         </Update>
