remove useless pisitools.removeDir func. in actions.py, sorry for the inconvenience..

--- a/programming/language/perl/perl-Test-Tester/pspec.xml
+++ b/programming/language/perl/perl-Test-Tester/pspec.xml
@@ -33,7 +33,7 @@
         <Update release="2">
             <Date>2010-08-21</Date>
             <Version>0.107</Version>
-            <Comment>Strictly depend on perl 5.12.1.</Comment>
+            <Comment>Strictly depend on perl 5.12.1 and remove useless pisitools.removeDir func. in actions.py.</Comment>
             <Name>Serdar Dalgıç</Name>
             <Email>serdar@pardus.org.tr</Email>
         </Update>
