Not use strict deps.

--- a/programming/language/python/pyparted/pspec.xml
+++ b/programming/language/python/pyparted/pspec.xml
@@ -15,7 +15,7 @@
         <Archive sha1sum="8c97f5870313bb25f4e17a914fd6d59c4d338c51" type="targz">https://fedorahosted.org/releases/p/y/pyparted/pyparted-3.4.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-decorator</Dependency>
-            <Dependency version="2.3">parted-devel</Dependency>
+            <Dependency versionFrom="2.3">parted-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">fix_pycompile.patch</Patch>
