Add forgotten Replaces and Obsolete tags

--- a/programming/language/python/python-PyOpenGL/pspec.xml
+++ b/programming/language/python/python-PyOpenGL/pspec.xml
@@ -21,6 +21,9 @@
             <Dependency>freeglut</Dependency>
             <Dependency>mesa</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>PyOpenGL</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
