--- a/programming/language/perl/perl-SGMLSpm/pspec.xml
+++ b/programming/language/perl/perl-SGMLSpm/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>perl-SGMLSpm</Name>
-        <Homepage>http://search.cpan.org/~dmegg</Homepage>
+        <Homepage>http://search.cpan.org/dist/SGMLSpm</Homepage>
         <Packager>
             <Name>Semen Cirit</Name>
             <Email>scirit@pardus.org.tr</Email>
