--- a/programming/language/python/pygtk/pspec.xml
+++ b/programming/language/python/pygtk/pspec.xml
@@ -21,7 +21,7 @@
             <Dependency>libglade-devel</Dependency>
             <Dependency>python-pygobject-devel</Dependency>
             <Dependency>python-cairo-devel</Dependency>
-            <Dependency>numpy</Dependency>
+            <Dependency>python-numpy</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">pygtk-2.13.0-fix-codegen-location.patch</Patch>
@@ -39,7 +39,7 @@
             <Dependency>libglade</Dependency>
             <Dependency>python-pygobject</Dependency>
             <Dependency>python-cairo</Dependency>
-            <Dependency>numpy</Dependency>
+            <Dependency>python-numpy</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
