--- a/programming/language/perl/perl-Probe-Perl/pspec.xml
+++ b/programming/language/perl/perl-Probe-Perl/pspec.xml
@@ -30,6 +30,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-08-22</Date>
+            <Version>0.01</Version>
+            <Comment>Remove useless pisitools.removeDir func. in actions.py as new perl package releaseFrom=34 does not create .packlist files when Module:Build is used too.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-21</Date>
             <Version>0.01</Version>
