Move all sip files to devel package and add runtime deps to it.

--- a/programming/language/python/PyQt/pspec.xml
+++ b/programming/language/python/PyQt/pspec.xml
@@ -30,9 +30,15 @@
         <Summary>Development files for PyQt</Summary>
         <RuntimeDependencies>
             <Dependency release="45">PyQt</Dependency>
+            <Dependency release="45">PyQt-webkit</Dependency>
+            <Dependency release="45">PyQt-phonon</Dependency>
             <Dependency>sip-devel</Dependency>
             <Dependency>qt-devel</Dependency>
         </RuntimeDependencies>
+        <Conflicts>
+            <Package releaseTo="45">PyQt-webkit</Package>
+            <Package releaseTo="45">PyQt-phonon</Package>
+        </Conflicts>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
             <Path fileType="data">/usr/share/sip</Path>
@@ -67,7 +73,6 @@
         <Files>
             <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/*WebKit*</Path>
             <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/uic/widget-plugins/*webkit*</Path>
-            <Path fileType="data">/usr/share/sip/PyQt4/*WebKit*</Path>
         </Files>
     </Package>
 
@@ -85,7 +90,6 @@
         <Files>
             <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/*phonon*</Path>
             <Path fileType="library">/usr/lib/python*/site-packages/PyQt4/uic/widget-plugins/*phonon*</Path>
-            <Path fileType="data">/usr/share/sip/PyQt4/*phonon*</Path>
         </Files>
     </Package>
 
@@ -104,6 +108,13 @@
     </Package>
 
     <History>
+        <Update release="46">
+            <Date>2010-08-24</Date>
+            <Version>4.7.4</Version>
+            <Comment>Move all sip files to devel package and add runtime deps to it.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="45">
             <Date>2010-08-21</Date>
             <Version>4.7.4</Version>
