--- a/programming/language/python/PyQt/pspec.xml
+++ b/programming/language/python/PyQt/pspec.xml
@@ -54,7 +54,7 @@
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
-            <Path fileType="data">/usr/qt/4/qsci</Path>
+            <Path fileType="data">/usr/share/qt4/qsci</Path>
             <Path fileType="library">/usr/lib/qt4/plugins/designer</Path>
         </Files>
     </Package>
