--- a/programming/language/perl/perl-Devel-StackTrace/pspec.xml
+++ b/programming/language/perl/perl-Devel-StackTrace/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A Perl module for stack trace and stack trace frame objects</Summary>
         <Description>perl-Devel-StackTrace is a Perl module for stack trace and stack trace frame objects.</Description>
-        <Archive sha1sum="4954176b59fecd53cc2496716df49db4290b6174" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/Devel-StackTrace-1.22.tar.gz</Archive>
+        <Archive sha1sum="5b4ce7bb5c280cbe658318db515af3416a8b7246" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/Devel-StackTrace-1.23.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
@@ -30,6 +30,15 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-08-29</Date>
+            <Version>1.23</Version>
+            <Comment>Version bump:
+                - Added message and indent constructor parameters
+            </Comment>
+            <Name>Necdet Yücel</Name>
+            <Email>necdetyucel@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-23</Date>
             <Version>1.22</Version>
