--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -57,6 +57,9 @@
 
             <!-- Suspend, sleep and hibernate fixes
             <Patch level="1">suspend-hibernate-fixes.patch</Patch>-->
+
+            <!-- Fix for #13842 -->
+            <Patch level="1">fix-xdg-user-dirs-translations.diff</Patch>
         </Patches>
     </Source>
     <Package>
