--- a/programming/language/python/python-v4l2capture/pspec.xml
+++ b/programming/language/python/python-v4l2capture/pspec.xml
@@ -5,8 +5,8 @@
         <Name>python-v4l2capture</Name>
         <Homepage>http://fredrik.jemla.eu/v4l2capture</Homepage>
         <Packager>
-            <Name>Deniz A. Gürsel</Name>
-            <Email>denizzgursel@gmail.com</Email>
+            <Name>Renan Çakırerk</Name>
+            <Email>renan@pardus.org.tr</Email>
         </Packager>
         <License>public-domain</License>
         <IsA>library</IsA>
