--- a/programming/language/python/python-v4l2capture/pspec.xml
+++ b/programming/language/python/python-v4l2capture/pspec.xml
@@ -14,7 +14,7 @@
         <Description>python-v4l2capture is a slim and easy to use Python extension for capturing video with video4linux2.</Description>
         <Archive sha1sum="8a11a2228be3051a1b5925c3756e207553c0ffc2" type="targz">http://fredrik.jemla.eu/v4l2capture-1.3.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency>libv4l</Dependency>
+            <Dependency>libv4l-devel</Dependency>
         </BuildDependencies>
     </Source>
 
