--- a/programming/language/python/python-imaging/pspec.xml
+++ b/programming/language/python/python-imaging/pspec.xml
@@ -15,9 +15,10 @@
         <Archive sha1sum="952d241e4af8ba09f74e6926108b7c0c748d0f89" type="targz">http://effbot.org/downloads/Imaging-1.1.6.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>python-tk</Dependency>
-            <Dependency>tcltk</Dependency>
-            <Dependency>tcl</Dependency>
-            <Dependency>sane-backends</Dependency>
+            <Dependency>tcltk-devel</Dependency>
+            <Dependency>tcl-devel</Dependency>
+            <Dependency>sane-backends-devel</Dependency>
+            <Dependency>jpeg-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">local_only_initial_value.patch</Patch>
