--- a/programming/language/python/pysqlite/pspec.xml
+++ b/programming/language/python/pysqlite/pspec.xml
@@ -5,8 +5,8 @@
         <Name>pysqlite</Name>
         <Homepage>http://oss.itsystementwicklung.de/trac/pysqlite</Homepage>
         <Packager>
-            <Name>Serdar Dalgıç</Name>
-            <Email>serdar@pardus.org.tr</Email>
+            <Name>Renan Çakırerk</Name>
+            <Email>renan@pardus.org.tr</Email>
         </Packager>
         <License>PSF-2.2</License>
         <IsA>library</IsA>
@@ -14,7 +14,7 @@
         <Description>pysqlite is a DB-API 2.0-compliant database interface for SQLite. pysqlite makes the powerful embedded SQL engine SQLite available to Python programmers. It stays compatible with the Python database API specification 2.0 as much as possible, but also exposes most of SQLite's native API, so that it is for example possible to create user-defined SQL functions and aggregates in Python.</Description>
         <Archive sha1sum="bba2a700f98f979fdf7b224db34d95ff94c2a5d7" type="targz">http://pysqlite.googlecode.com/files/pysqlite-2.6.0.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency>sqlite</Dependency>
+            <Dependency>sqlite-devel</Dependency>
             <Dependency>python-sphinx</Dependency>
         </BuildDependencies>
     </Source>
