Add a stupid hack to get sphinx-build work in pardus 2011.

--- a/programming/language/python/python-sphinx/pspec.xml
+++ b/programming/language/python/python-sphinx/pspec.xml
@@ -18,6 +18,9 @@
             <Dependency>python-Pygments</Dependency>
             <Dependency>python-Jinja2</Dependency>
         </BuildDependencies>
+        <Patches>
+            <Patch>remove_docutils.patch</Patch>
+        </Patches>
     </Source>
 
     <Package>
@@ -43,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="9">
+            <Date>2010-09-01</Date>
+            <Version>1.0.3</Version>
+            <Comment>Add a stupid hack to get sphinx-build work in pardus 2011.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="8">
             <Date>2010-08-31</Date>
             <Version>1.0.3</Version>
