Update reverted release.

--- a/programming/language/python/pyparted/pspec.xml
+++ b/programming/language/python/pyparted/pspec.xml
@@ -12,20 +12,21 @@
         <IsA>library</IsA>
         <Summary>Python bindings for parted</Summary>
         <Description>pyparted is the python module which enables to use GNU Parted package from python. Using python with this module, programmers can create, destroy, resize, check and copy partitions, and the file systems on them.</Description>
-        <Archive sha1sum="389eb99e4504d827baee3a4e16ebf63c8c159825" type="tarbz2">https://fedorahosted.org/releases/p/y/pyparted/pyparted-1.8.9.tar.bz2</Archive>
+        <Archive sha1sum="8c97f5870313bb25f4e17a914fd6d59c4d338c51" type="targz">https://fedorahosted.org/releases/p/y/pyparted/pyparted-3.4.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency versionFrom="1.8.6">parted-devel</Dependency>
+            <Dependency>python-decorator</Dependency>
+            <Dependency versionFrom="2.3">parted-devel</Dependency>
         </BuildDependencies>
         <Patches>
-            <Patch level="1">pardus.patch</Patch>
-            <!-- <Patch level="1">fix_pycompile.patch</Patch>-->
+            <Patch level="1">fix_pycompile.patch</Patch>
         </Patches>
     </Source>
 
     <Package>
         <Name>pyparted</Name>
         <RuntimeDependencies>
-            <Dependency versionFrom="1.8.6">parted</Dependency>
+            <Dependency>python-decorator</Dependency>
+            <Dependency versionFrom="2.2">parted</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -34,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="12">
+            <Date>2010-09-02</Date>
+            <Version>3.4</Version>
+            <Comment>Update reverted release.</Comment>
+            <Name>Mete Alpaslan</Name>
+            <Email>mete@pardus.org.tr</Email>
+        </Update>
         <Update release="11">
             <Date>2010-08-26</Date>
             <Version>1.8.9</Version>
