--- a/tex/language/texlive-lang-indic/pspec.xml
+++ b/tex/language/texlive-lang-indic/pspec.xml
@@ -35,6 +35,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-09-05</Date>
+            <Version>0.0_20091107</Version>
+            <Comment>Fixes conflict with texlive-core</Comment>
+            <Name>Fatih Arslan</Name>
+            <Email>farslan@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-20</Date>
             <Version>0.0_20091107</Version>
