--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -12,9 +12,11 @@
         <IsA>app:console</IsA>
         <Summary>SIP is a tool for generating bindings for C++ classes so that they can be used by Python</Summary>
         <Description>SIP is a tool for generating bindings for C and C++ libraries so that they can be used by Python. It takes any C or C++ libraries and converts them into Python extension modules.</Description>
-        <Archive sha1sum="49660186cbc8cfd772029ab84446903ca85b397f" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.10.5.tar.gz</Archive>
+        <Archive sha1sum="f24e55cf4ebc89986b9e2694e0e516e2c94d6595" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.tar.gz</Archive>
         <Patches>
             <Patch level="1">no-strip.patch</Patch>
+            <Patch>disable-rpaths.diff</Patch>
+            <Patch>fix-linking.diff</Patch>
         </Patches>
     </Source>
 
@@ -30,7 +32,7 @@
         <Name>sip-devel</Name>
         <Summary>Development files for sip</Summary>
         <RuntimeDependencies>
-            <Dependency release="38">sip</Dependency>
+            <Dependency release="39">sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
@@ -39,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="39">
+            <Date>2010-08-31</Date>
+            <Version>4.11</Version>
+            <Comment>Version bump to 4.11</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="38">
             <Date>2010-08-16</Date>
             <Version>4.10.5</Version>
