--- a/programming/language/python/PyQt/pspec.xml
+++ b/programming/language/python/PyQt/pspec.xml
@@ -13,12 +13,12 @@
         <IsA>library</IsA>
         <Summary>A set of Python bindings for the Qt 4.x Toolkit</Summary>
         <Description>Qt is a set of C++ libraries and development tools that includes platform independent abstractions for graphical user interfaces, networking, threads, Unicode, regular expressions, SQL databases, SVG, OpenGL, XML, and user and application settings. PyQt implements 440 of these classes as a set of Python modules.</Description>
-        <Archive sha1sum="dd1d9eb22f9780c54e3811c8958512847eacc302" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.7.4.tar.gz</Archive>
+        <Archive sha1sum="0c7c96872b8dfc1822618fbaacae735e91d8405f" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/PyQt4/PyQt-x11-gpl-4.7.5.tar.gz</Archive>
         <BuildDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt-devel</Dependency>
-            <Dependency versionFrom="4.10.5">sip-devel</Dependency>
+            <Dependency versionFrom="4.11">sip-devel</Dependency>
             <Dependency versionFrom="4.7.0_beta2">qt-webkit</Dependency>
-            <Dependency versionFrom="4.4.2">phonon</Dependency>
+            <Dependency versionFrom="4.4.2">phonon-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch>add_gettext_support.patch</Patch>
@@ -29,10 +29,10 @@
         <Name>PyQt-devel</Name>
         <Summary>Development files for PyQt</Summary>
         <RuntimeDependencies>
-            <Dependency release="46">PyQt</Dependency>
-            <Dependency release="46">PyQt-webkit</Dependency>
-            <Dependency release="46">PyQt-phonon</Dependency>
-            <Dependency>sip-devel</Dependency>
+            <Dependency release="47">PyQt</Dependency>
+            <Dependency release="47">PyQt-webkit</Dependency>
+            <Dependency release="47">PyQt-phonon</Dependency>
+            <Dependency versionFrom="4.11">sip-devel</Dependency>
             <Dependency>qt-devel</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -49,7 +49,7 @@
         <Name>PyQt</Name>
         <RuntimeDependencies>
             <Dependency versionFrom="4.7.0_beta2">qt</Dependency>
-            <Dependency versionFrom="4.10.5">sip</Dependency>
+            <Dependency versionFrom="4.11">sip</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="library">/usr/lib</Path>
@@ -63,7 +63,7 @@
         <Name>PyQt-webkit</Name>
         <Summary>Python bindings for QtWebkit library</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="43">PyQt</Dependency>
+            <Dependency releaseFrom="47">PyQt</Dependency>
             <Dependency versionFrom="4.7.0_beta2">qt-webkit</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -80,7 +80,7 @@
         <Name>PyQt-phonon</Name>
         <Summary>Python bindings for Phonon multimedia library</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="43">PyQt</Dependency>
+            <Dependency releaseFrom="47">PyQt</Dependency>
             <Dependency versionFrom="4.4.2">phonon</Dependency>
         </RuntimeDependencies>
         <Conflicts>
@@ -108,6 +108,13 @@
     </Package>
 
     <History>
+        <Update release="47">
+            <Date>2010-08-31</Date>
+            <Version>4.7.5</Version>
+            <Comment>Version bump to 4.7.5</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="46">
             <Date>2010-08-24</Date>
             <Version>4.7.4</Version>
