--- a/programming/language/perl/perl-Devel-StackTrace/pspec.xml
+++ b/programming/language/perl/perl-Devel-StackTrace/pspec.xml
@@ -13,7 +13,7 @@
         <IsA>library</IsA>
         <Summary>A Perl module for stack trace and stack trace frame objects</Summary>
         <Description>perl-Devel-StackTrace is a Perl module for stack trace and stack trace frame objects.</Description>
-        <Archive sha1sum="5b4ce7bb5c280cbe658318db515af3416a8b7246" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/Devel-StackTrace-1.23.tar.gz</Archive>
+        <Archive sha1sum="4a1e68411ae5bc39c48a2030e9fa917644484ac0" type="targz">mirrors://cpan/authors/id/D/DR/DROLSKY/Devel-StackTrace-1.25.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
         </BuildDependencies>
@@ -30,6 +30,15 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-09-07</Date>
+            <Version>1.25</Version>
+            <Comment>Version bump:
+                - Devel::StackTraceFrame was not actually subclassing Devel::StackTrace::Frame.
+            </Comment>
+            <Name>Necdet Yücel</Name>
+            <Email>necdetyucel@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-08-29</Date>
             <Version>1.23</Version>
