--- a/programming/language/R/pspec.xml
+++ b/programming/language/R/pspec.xml
@@ -34,6 +34,7 @@
             <Patch level="1">dont_use_atlas.patch</Patch>
             <Patch level="1">R-2.9.0_as-needed.patch</Patch>
             <Patch level="1">config_site.patch</Patch>
+            <Patch level="1">remove-lib64-suffix.diff</Patch>
         </Patches>
     </Source>
 
