Fix libm linkage issue and fix deps

--- a/programming/language/R/pspec.xml
+++ b/programming/language/R/pspec.xml
@@ -14,20 +14,21 @@
         <Summary>A free software environment for statistical computing and graphics</Summary>
         <Archive sha1sum="0b36780627f3cc5cea3f41e0b717ed7ee92ba086"  type="targz">http://cran.r-project.org/src/base/R-2/R-2.11.1.tar.gz</Archive>
         <BuildDependencies>
-            <Dependency>libXmu</Dependency>
-            <Dependency>icu4c</Dependency>
+            <Dependency>libXmu-devel</Dependency>
+            <Dependency>icu4c-devel</Dependency>
             <Dependency>sun-jdk</Dependency>
             <Dependency>xdg-utils</Dependency>
-            <Dependency>ghostscript</Dependency>
+            <Dependency>ghostscript-devel</Dependency>
             <Dependency>texlive-latexrecommended</Dependency>
-            <Dependency>blas</Dependency>
-            <Dependency>lapack</Dependency>
+            <Dependency>blas-devel</Dependency>
+            <Dependency>lapack-devel</Dependency>
             <Dependency>libXt-devel</Dependency>
             <Dependency>libSM-devel</Dependency>
-            <Dependency versionFrom="1.8.8">cairo</Dependency>
-            <Dependency>pango</Dependency>
-            <Dependency>xz</Dependency>
-            <Dependency>jpeg</Dependency>
+            <Dependency versionFrom="1.8.8">cairo-devel</Dependency>
+            <Dependency>pango-devel</Dependency>
+            <Dependency>xz-devel</Dependency>
+            <Dependency>jpeg-devel</Dependency>
+            <Dependency>tiff-devel</Dependency>
         </BuildDependencies>
         <Patches>
             <Patch level="1">Rscript.patch</Patch>
@@ -35,6 +36,7 @@
             <Patch level="1">R-2.9.0_as-needed.patch</Patch>
             <Patch level="1">config_site.patch</Patch>
             <Patch level="1">remove-lib64-suffix.diff</Patch>
+            <Patch level="1">fix-mathlib-libm-issue.diff</Patch>
         </Patches>
     </Source>
 
@@ -56,6 +58,7 @@
             <Dependency>pango</Dependency>
             <Dependency>make</Dependency>
             <Dependency>jpeg</Dependency>
+            <Dependency>tiff</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="config">/etc</Path>
