Use /etc/ld.so.conf.d instead of LDPATH in /etc/env.d

--- a/programming/language/R/pspec.xml
+++ b/programming/language/R/pspec.xml
@@ -67,6 +67,7 @@
         </Files>
         <AdditionalFiles>
             <AdditionalFile target="/etc/env.d/99R" owner="root" permission="0644">99R</AdditionalFile>
+            <AdditionalFile target="/etc/ld.so.conf.d/99-R.conf" owner="root" permission="0644">ld.so.conf</AdditionalFile>
         </AdditionalFiles>
         <Provides>
             <COMAR script="package.py">System.Package</COMAR>
@@ -100,7 +101,7 @@
         <Name>R-devel</Name>
         <Summary>Development files for R</Summary>
         <RuntimeDependencies>
-            <Dependency release="30">R</Dependency>
+            <Dependency release="31">R</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="header">/usr/include</Path>
@@ -111,6 +112,13 @@
     </Package>
 
     <History>
+        <Update release="31">
+            <Date>2010-09-08</Date>
+            <Version>2.11.1</Version>
+            <Comment>Use /etc/ld.so.conf.d instead of LDPATH in /etc/env.d</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="30">
             <Date>2010-08-27</Date>
             <Version>2.11.1</Version>
