--- a/programming/language/python/python-xcb/translations.xml
+++ b/programming/language/python/python-xcb/translations.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" ?>
 <PISI>
     <Source>
-        <Name>xpyb</Name>
-        <Summary xml:lang="tr">X C Bağlayıcıları (XCB) kitaplığını temel alan X Python bağlayıcısı</Summary>
-        <Description xml:lang="tr">xpyb, libxcb kitaplığını kullanarak X Pencere Sistemi protokolü için Python bağlayıcısı sağlar.</Description>
+        <Name>python-xcb</Name>
+        <Summary xml:lang="tr">X C Bağlayıcıları (XCB) kitaplığını temel alan X Python bağlayıcısı (xpyb)</Summary>
+        <Description xml:lang="tr">python-xcb (xpyb), libxcb kitaplığını kullanarak X Pencere Sistemi protokolü için Python bağlayıcısı sağlar.</Description>
     </Source>
 </PISI>
 
