--- a/programming/language/perl/perl-Test-NoWarnings/pspec.xml
+++ b/programming/language/perl/perl-Test-NoWarnings/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Make sure you didn't emit any warnings while testing Perl code</Summary>
         <Description>perl-Test-NoWarnings is a Perl module that makes sure you didn't emit any warnings while testing.</Description>
-        <Archive sha1sum="9f13caef00364436563d8387dd679466496b82dd" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/Test-NoWarnings-1.01.tar.gz</Archive>
+        <Archive sha1sum="474ed429369e6fa0535d843372bce4185c97fa40" type="targz">mirrors://cpan/authors/id/A/AD/ADAMK/Test-NoWarnings-1.02.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.1">perl</Dependency>
             <Dependency>perl-Test-Tester</Dependency>
@@ -31,6 +31,21 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-09-10</Date>
+            <Version>1.02</Version>
+            <Comment>Version bump:
+                - Don't "use warnings" anywhere inside of Test::NoWarnings::* just in case we trigger a recursive warning handler in future
+                - Remove the need for a private variable when detecting Devel::StackTrace support
+                - Don't import unused functions from Carp or Test::Builder
+                - Minor documentation tweaks
+                - Correct the repository metadata in META.yml
+                - Minor cleanups in the eumm-update generated code
+                - Added a dedicated compile test
+            </Comment>
+            <Name>Necdet Yücel</Name>
+            <Email>necdetyucel@gmail.com</Email>
+        </Update>
         <Update release="2">
             <Date>2010-08-23</Date>
             <Version>1.01</Version>
