fix build dep typo

--- a/programming/language/python/python-pyalsaaudio/pspec.xml
+++ b/programming/language/python/python-pyalsaaudio/pspec.xml
@@ -15,7 +15,7 @@
         <Archive sha1sum="27138ceb6ed7f86d21c5ecdaf74fc26e5a622cf5" type="targz">mirrors://sourceforge/pyalsaaudio/pyalsaaudio-0.6.tar.gz</Archive>
         <BuildDependencies>
             <Dependency>alsa-lib-devel</Dependency>
-            <Dependency>python-sphinx-devel</Dependency>
+            <Dependency>python-sphinx</Dependency>
         </BuildDependencies>
     </Source>
 
