--- a/programming/language/python/sip/pspec.xml
+++ b/programming/language/python/sip/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>app:console</IsA>
         <Summary>SIP is a tool for generating bindings for C++ classes so that they can be used by Python</Summary>
         <Description>SIP is a tool for generating bindings for C and C++ libraries so that they can be used by Python. It takes any C or C++ libraries and converts them into Python extension modules.</Description>
-        <Archive sha1sum="f24e55cf4ebc89986b9e2694e0e516e2c94d6595" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.tar.gz</Archive>
+        <Archive sha1sum="040f08eaf1e30efb3e50a117b0377bc8b97fb357" type="targz">http://www.riverbankcomputing.co.uk/static/Downloads/sip4/sip-4.11.1.tar.gz</Archive>
         <Patches>
             <Patch level="1">no-strip.patch</Patch>
             <Patch>disable-rpaths.diff</Patch>
@@ -41,6 +41,13 @@
     </Package>
 
     <History>
+        <Update release="40">
+            <Date>2010-09-13</Date>
+            <Version>4.11.1</Version>
+            <Comment>Version bump to 4.11.1</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="39">
             <Date>2010-08-31</Date>
             <Version>4.11</Version>
